2019/05/lanzar-excepciones-checked-como-si-fueran-unchecked-en-java/code/System.out-1
$ java Main1.java 
Main1.java:9: error: unreported exception Exception; must be caught or declared to be thrown
                throw new Exception();
                ^
1 error
error: compilation failed